# llm-samplers

./: Cargo.toml  README.md
src/: chain.rs  configure.rs  lib.rs  rand.rs  resource.rs  tests.rs  types.rs
src/configure/: build.rs  building.rs  configurable.rs  metadata.rs  mod.rs  value.rs
src/samplers/: flat_bias.rs  freq_presence.rs  freqpresence.rs  greedy.rs  locally_typical.rs  min_p.rs  mirostat.rs  mod.rs  rand_distrib.rs  repetition.rs  sequence_repetition.rs  tail_free.rs  temperature.rs  top_a.rs  top_k.rs  top_p.rs  typical.rs
