[package]
name = "llm-samplers"
version = "0.0.2"
edition = "2021"
description = "Token samplers for large language models"
repository = "https://github.com/KerfuffleV2/rusty-ggml"
keywords = ["deep-learning", "machine-learning", "ml", "sampler"]
license = "MIT"
resolver = "2"

[dependencies]
num-traits = "0.2"
# num-derive = "0.3"
rand = "0.8"
