[package]
name = "llm-samplers"
version = "0.0.7"
edition = "2021"
description = "Token samplers for large language models"
repository = "https://github.com/KerfuffleV2/llm-samplers"
keywords = ["deep-learning", "machine-learning", "ml", "sampler"]
license = "MIT"
resolver = "2"

[dependencies]
num-traits = "0.2"
thiserror = "1"
anyhow = "1"
rand = "0.8"
